# webscraper-cli

./: .gitignore  CHANGES.md  LICENSE  README.md  TEST_SUMMARY.md  TOOL_CONTEST_REPORT.md  TOOL_CONTEST_REPORT_V4.md  cli.py  pyproject.toml  requirements.txt
.cursor-plugin/: plugin.json
.cursor/rules/: webscraper-cli.mdc
commands/: api.py  assert_commands.py  audit.py  batch.py  clipboard.py  compare.py  content.py  crawl.py  daemon.py  dialogs.py  docs.py  download.py  emulate.py  eval.py  extract.py  flow.py  forms.py  frames.py  human.py  inspect.py  interact.py  monitor.py  navigate.py  network.py  page.py  perf.py  recon.py  record.py  screenshot.py  scroll.py  serve.py  shadow.py  storage.py  tabs.py  visual.py  wait.py
core/: __init__.py  async_command.py  browser.py  errors.py  output.py  progress.py  registry.py  settings.py
rules/: webscraper-cli.mdc
skills/browser-automation/: SKILL.md
skills/crawl-site/: SKILL.md
skills/scrape-and-extract/: SKILL.md
skills/site-audit/: SKILL.md
